Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.xx
DATE 0x/xx/2009
24th Alpha Release

NEWS:


NEW: [features/enhancments]
+New Plugin Manager Dialog.
+Add shortcut for LineDelete to delete line without modifying clipboard.

BUG FIXES:
+Fix incorrect page count shown in print previews.
+Remember print settings throughout session and for every frame.
+Fix error when doing Copy Path from tab right click menu.
+Fix incorrectly showing autocompletion options under some cases in php files.
+Fix condition where window could be placed at (0, 0) on OSX which causes the
 frame to be placed behind the menubar.
+Fix improper detection of when to auto-unindent in Python files.
+Fix Python auto-indent from incorrectly inserting space when the cursor is
in the indentation space of a line.
+Fix Close All option in tab context menu not working on GTK.

#-----------------------------------------------------------------------------#

VERSION 0.4.65
DATE 02/20/2009
23rd Alpha Release

NEWS:
This release contains a large number of bug fixes and improvements. Most notably
there has been a fair amount of work done on the autocompletions support. All
file types now have support for some basic word completion help. HTML and XML
now have support for smart input assistance and completion tips.

NEW: [features/improvments]
+Add autocompletion support for HTML/XML documents.
+Instantly start searching for selected text (Win/Lin Ctrl+F3, OSX Cmd+3)
+Launch adds support for OCaml (patch from quode),
 Batch scripts (patch from GaÎl), and LaTex.
+Shortcut for maximizing/minimizing the editor pane (patch from Rudi Pettazzi)
+Add menu entry for Fold All action (patch from Giuseppe "Cowo" Corbelli)
+Codebrowser adds support for XML/HTML (patch from Rudi Pettazzi)
+Codebrowser adds support for Vala, VBScript